--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
+body {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+}
+
+.section-top__btn, .products__btn, .header__menu-link, .section-top__text {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 700;
+}
+
+.title, .section-top__percent, .sale-slider__text, .sale-slider__title {
+  font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 400;
+}
+
+.section-top__title {
+  font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 700;
+}
+
+.section-top__btn, .products__btn {
+  width: 280px;
+  background-color: #ff7300;
+  height: 60px;
+  color: #fff;
+  line-height: 24px;
+  text-transform: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -12,9 +50,14 @@ html {
 
 html,
 body {
-  height: 100%;
-  position: relative;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  color: #556680;
+  font-size: 16px;
 }
 
 a {
@@ -27,4 +70,280 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+.container {
+  max-width: 1180px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 38px;
+  text-transform: uppercase;
+  letter-spacing: 0.275em;
+  margin-bottom: 50px;
+}
+
+.header {
+  margin-top: 15px;
+}
+
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__phone {
+  color: #556680;
+  font-size: 18px;
+}
+
+.header__menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+}
+
+.header__menu-item {
+  margin-left: 59px;
+}
+
+.header__menu-link {
+  color: #556680;
+}
+
+.section-top {
+  margin-top: 58px;
+}
+
+.section-top__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-top__box {
+  text-transform: uppercase;
+}
+
+.section-top__title {
+  color: #4c75b2;
+  font-size: 72px;
+  letter-spacing: 0.275em;
+}
+
+.section-top__title span {
+  border: 3px solid #4c75b2;
+  width: 10px;
+  border-radius: 3px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-top__text-box {
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
+  margin-right: 5px;
+}
+
+.section-top__percent {
+  font-size: 72px;
+  letter-spacing: 0.275em;
+}
+
+.section-top__text {
+  font-size: 18px;
+  letter-spacing: 0.1em;
+}
+
+.section-top__text span {
+  display: block;
+  font-size: 12px;
+  letter-spacing: 0.06em;
+  margin-top: 10px;
+}
+
+.section-top__img {
+  position: relative;
+}
+
+.section-top__img::before {
+  content: "";
+  display: block;
+  background-color: #00760c;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  -webkit-transform: translate(200px, 100px);
+          transform: translate(200px, 100px);
+}
+
+.section-top__img img {
+  max-width: 782px;
+}
+
+.products {
+  margin-top: 190px;
+}
+
+.products__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.products__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 50px;
+}
+
+.products__item {
+  width: 280px;
+  height: 400px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background: linear-gradient(33.67deg, rgba(12, 128, 255, 0.087) 3.04%, rgba(12, 36, 62, 0) 98.92%);
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+  padding: 0 25px 32px;
+  color: #000;
+}
+
+.products__bg {
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.products__item-title {
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+}
+
+.products__btn {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.sale-slider {
+  margin-top: 90px;
+  background-color: #ff7300;
+}
+
+.sale-slider__inner {
+  padding: 30px 0 49px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.sale-slider__offer {
+  background-color: #0d233f;
+  border-radius: 2px;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0.12em;
+  padding: 4px 10px;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.sale-slider__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sale-slider__box {
+  max-width: 500px;
+}
+
+.sale-slider__text {
+  font-size: 50px;
+  line-height: 64px;
+  letter-spacing: 0.12em;
+}
+
+.sale-slider__title {
+  font-size: 30px;
+  letter-spacing: 0.275em;
+}
+
+.sale-slider__img img {
+  max-width: 790px;
 }
