--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -8,9 +8,14 @@ html {
 }
 html,
 body {
-	height: 100%;
-	position: relative;
 	overflow-x: hidden;
+	margin: 0;
+	padding: 0;
+}
+body {
+	color: $color-text;
+	font-size: 16px;
+	@extend %roboto-mono-regular;
 }
 a {
 	text-decoration: none;
@@ -21,4 +26,31 @@ li {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
+}
+img {
+	display: block;
+	width: 100%;
+}
+
+.container {
+	max-width: 1180px;
+	padding: 0 15px;
+	margin: 0 auto;
+}
+
+.title {
+	@extend %sans-narrow-regular;
+	font-size: 38px;
+	text-transform: uppercase;
+	letter-spacing: 0.275em;
+	margin-bottom: 50px;
 }
