--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
 }
 
-.section-top__btn, .products__btn, .request-call__btn, .header__menu-link, .section-top__text, .count__title, .footer__item-title {
+.section-top__btn, .products__btn, .request-call__btn, .about-articles__link, .submenu__link.active, .about-articles__prev-link, .submenu__link, .header__menu-link, .section-top__text, .count__title, .footer__item-title, .about-news__inner p, .about-vacancies__text, .about-articles__prev-title, .about-articles__slide--title, .about-partners__inner p {
   font-family: "Roboto Mono", monospace;
   font-weight: 700;
 }
@@ -18,13 +18,31 @@ body {
   font-weight: 700;
 }
 
-.section-top__btn, .products__btn, .request-call__btn {
+.section-top__btn, .products__btn, .request-call__btn, .about-articles__link {
   width: 280px;
   background-color: #ff7300;
   height: 60px;
   color: #fff;
   line-height: 24px;
   text-transform: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
+.submenu__link.active, .about-articles__prev-link {
+  width: 180px;
+  background-color: #ff7300;
+  height: 30px;
+  color: #fff;
+  line-height: 24px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -59,6 +77,7 @@ body {
 body {
   color: #556680;
   font-size: 16px;
+  line-height: 24px;
 }
 
 a {
@@ -107,6 +126,33 @@ img {
   outline: none;
 }
 
+.submenu {
+  margin-top: 70px;
+  margin-bottom: 50px;
+}
+
+.submenu__inner {
+  padding: 0 40px;
+}
+
+.submenu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+}
+
+.submenu__link {
+  color: #556680;
+}
+
 .header {
   margin-top: 15px;
 }
@@ -145,6 +191,10 @@ img {
 
 .header__menu-link {
   color: #556680;
+}
+
+.header__menu-link.active {
+  border-bottom: 1px solid #000;
 }
 
 .section-top {
@@ -739,4 +789,358 @@ img {
   margin-left: auto;
   margin-right: 0;
   display: block;
+}
+
+.about-about {
+  padding-bottom: 90px;
+}
+
+.about-about__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about-about__text {
+  max-width: 585px;
+}
+
+.about-about__text p {
+  text-indent: 40px;
+}
+
+.about-about__text p:first-child {
+  margin-top: 0;
+}
+
+.about-about__img img {
+  max-width: 480px;
+}
+
+.about-news {
+  padding-bottom: 90px;
+}
+
+.about-news__inner p {
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+}
+
+.about-gallery {
+  padding-bottom: 90px;
+}
+
+.about-gallery__item img {
+  max-width: 1180px;
+  max-height: 720px;
+}
+
+.about-gallery .slick-prev,
+.about-gallery .slick-next {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: inline-block;
+  z-index: 3;
+  font-size: 38px;
+  color: #000;
+  width: 60px;
+  height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.about-gallery .slick-prev.slick-disabled,
+.about-gallery .slick-next.slick-disabled {
+  opacity: 0.6;
+}
+
+.about-gallery .slick-prev:hover,
+.about-gallery .slick-next:hover {
+  color: #fff;
+  width: 60px;
+  height: 80px;
+  background-color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 0 3px 3px 0;
+}
+
+.about-gallery .slick-next {
+  right: 0;
+}
+
+.about-gallery .slick-next:hover {
+  border-radius: 3px 0 0 3px;
+}
+
+.about-gallery .slick-prev {
+  left: 0;
+}
+
+.about-gallery .slick-dots {
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: #000;
+  font-size: 20px;
+}
+
+.about-gallery .slick-dots li {
+  display: inline-block;
+  position: relative;
+  pointer-events: none;
+}
+
+.about-gallery .slick-dots li:not(.slick-active) {
+  display: none;
+}
+
+.about-gallery .slick-dots-button {
+  padding: 0;
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
+.about-gallery .slick-dots-current,
+.about-gallery .slick-dots-total {
+  display: inline-block;
+}
+
+.about-gallery .slick-dots-total {
+  opacity: 0.6;
+}
+
+.about-gallery .slick-dots-separator {
+  position: relative;
+  margin: 0 10px;
+}
+
+.about-gallery .slick-dots-separator::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 1px;
+  width: 1px;
+  height: 20px;
+  background: #000;
+  -webkit-transform: rotate(7deg) translateY(-50%);
+          transform: rotate(7deg) translateY(-50%);
+}
+
+.about-vacancies {
+  padding-bottom: 90px;
+}
+
+.about-vacancies__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about-vacancies__text {
+  margin-top: 0;
+  max-width: 460px;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+  font-size: 14px;
+}
+
+.about-vacancies__img img {
+  max-width: 484px;
+}
+
+.about-articles {
+  padding-bottom: 90px;
+}
+
+.about-articles__prev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about-articles__prev-box {
+  max-width: 582px;
+}
+
+.about-articles__prev-title {
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+}
+
+.about-articles__prev-text {
+  font-size: 14px;
+  text-indent: 30px;
+}
+
+.about-articles__prev-link {
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+.about-articles__prev-img {
+  max-width: 480px;
+}
+
+.about-articles__slider {
+  margin-top: 90px;
+}
+
+.about-articles__slider .slick-prev,
+.about-articles__slider .slick-next {
+  position: absolute;
+  bottom: -60px;
+  right: 0;
+  display: inline-block;
+  z-index: 3;
+  font-size: 16px;
+  color: #000;
+  cursor: pointer;
+}
+
+.about-articles__slider .slick-prev.slick-disabled,
+.about-articles__slider .slick-next.slick-disabled {
+  opacity: 0.6;
+}
+
+.about-articles__slider .slick-prev {
+  right: 94px;
+}
+
+.about-articles__slider .slick-dots {
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  position: absolute;
+  bottom: -60px;
+  right: 24px;
+  color: #000;
+  font-size: 16px;
+}
+
+.about-articles__slider .slick-dots li {
+  display: inline-block;
+  position: relative;
+  pointer-events: none;
+}
+
+.about-articles__slider .slick-dots li:not(.slick-active) {
+  display: none;
+}
+
+.about-articles__slider .slick-dots-button {
+  padding: 0;
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
+.about-articles__slider .slick-dots-current,
+.about-articles__slider .slick-dots-total {
+  display: inline-block;
+}
+
+.about-articles__slider .slick-dots-total {
+  opacity: 0.6;
+}
+
+.about-articles__slider .slick-dots-separator {
+  position: relative;
+  margin: 0 10px;
+}
+
+.about-articles__slider .slick-dots-separator::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 1px;
+  width: 1px;
+  height: 16px;
+  background: #000;
+  -webkit-transform: rotate(7deg) translateY(-50%);
+          transform: rotate(7deg) translateY(-50%);
+}
+
+.about-articles__slide {
+  width: 280px;
+  height: 400px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(20.12%, rgba(12, 36, 62, 0.3)), to(rgba(12, 36, 62, 0)));
+  background: linear-gradient(360deg, rgba(12, 36, 62, 0.3) 20.12%, rgba(12, 36, 62, 0) 100%);
+  padding: 0 14px 15px;
+  color: #000;
+}
+
+.about-articles__slide-bg {
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.about-articles__slide--title {
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+  color: #fff;
+}
+
+.about-articles__link {
+  margin-top: 60px;
+  height: 30px;
+  text-transform: uppercase;
+}
+
+.about-partners {
+  padding-bottom: 90px;
+}
+
+.about-partners__inner p {
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
 }
