--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -15,6 +15,7 @@ body {
 body {
 	color: $color-text;
 	font-size: 16px;
+	line-height: 24px;
 	@extend %roboto-mono-regular;
 }
 a {
@@ -58,4 +59,28 @@ img {
 }
 .slick-slide:focus {
 	outline: none;
+}
+
+.submenu {
+	margin-top: 70px;
+	margin-bottom: 50px;
+	&__inner {
+		padding: 0 40px;
+	}
+
+	&__list {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		text-transform: uppercase;
+		letter-spacing: 0.12em;
+	}
+
+	&__link {
+		color: $color-text;
+		@extend %roboto-mono-bold;
+		&.active {
+			@extend %submenu-btn;
+		}
+	}
 }
