--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
 }
 
-.section-top__btn, .products__btn, .request-call__btn, .about-articles__link, .submenu__link.active, .about-articles__prev-link, .submenu__link, .header__menu-link, .section-top__text, .count__title, .footer__item-title, .about-news__inner p, .about-vacancies__text, .about-articles__prev-title, .about-articles__slide--title, .about-partners__inner p {
+.section-top__btn, .products__btn, .request-call__btn, .about-articles__prev-link, .about-articles__link, .submenu__link, .header__menu-link, .section-top__text, .count__title, .footer__item-title, .about-news__inner p, .about-vacancies__text, .about-articles__prev-title, .about-articles__slide--title, .about-partners__inner p {
   font-family: "Roboto Mono", monospace;
   font-weight: 700;
 }
@@ -18,31 +18,13 @@ body {
   font-weight: 700;
 }
 
-.section-top__btn, .products__btn, .request-call__btn, .about-articles__link {
+.section-top__btn, .products__btn, .request-call__btn, .about-articles__prev-link, .about-articles__link {
   width: 280px;
   background-color: #ff7300;
   height: 60px;
   color: #fff;
   line-height: 24px;
   text-transform: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  cursor: pointer;
-}
-
-.submenu__link.active, .about-articles__prev-link {
-  width: 180px;
-  background-color: #ff7300;
-  height: 30px;
-  color: #fff;
-  line-height: 24px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -132,16 +114,16 @@ img {
 }
 
 .submenu__inner {
-  padding: 0 40px;
+  padding: 0 10px;
 }
 
 .submenu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -149,8 +131,34 @@ img {
   letter-spacing: 0.12em;
 }
 
+.submenu__item {
+  margin-right: 10px;
+}
+
+.submenu__item:last-child {
+  margin-right: 0;
+}
+
 .submenu__link {
   color: #556680;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 24px;
+  width: 180px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.submenu__link.active {
+  background-color: #ff7300;
+  color: #fff;
 }
 
 .header {
@@ -535,6 +543,7 @@ img {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0.12em;
+  margin-top: 15px;
   text-transform: uppercase;
 }
 
@@ -698,6 +707,7 @@ img {
   width: 100%;
   height: 60px;
   padding: 0 10px 0 15px;
+  border: 2px solid #0c243e;
 }
 
 .request-call__btn {
@@ -769,6 +779,10 @@ img {
   line-height: 20px;
 }
 
+.footer__menu-link:hover {
+  text-decoration: underline;
+}
+
 .footer__catalog {
   width: 240px;
 }
@@ -779,6 +793,10 @@ img {
 
 .footer__contacts {
   width: 290px;
+}
+
+.footer__contacts address.footer__menu-link:hover {
+  text-decoration: none;
 }
 
 .footer__police {
@@ -1008,6 +1026,8 @@ img {
 }
 
 .about-articles__prev-link {
+  width: 180px;
+  height: 30px;
   text-transform: uppercase;
   margin-top: 30px;
 }
