Сборка сайта через гал

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,5 +1,7 @@
-@import "_vars";
-@import "_global";
+@import "vars";
+@import "fonts";
+@import "global";
+@import "slick";
 
 .header {
 	margin-top: 15px;
