--- a/#src/scss/_vars.scss
+++ b/#src/scss/_vars.scss
@@ -1,3 +1,13 @@
+@mixin font($font_name, $file_name, $weight, $style) {
+	@font-face {
+		font-family: $font_name;
+		font-display: swap;
+		src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
+		font-weight: #{$weight};
+		font-style: #{$style};
+	}
+}
+
 $color-text: #556680;
 $color-green: #00760c;
 $color-green-light: #039812;
